...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<LinearLayout
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/message"
...
            android:layout_gravity="center_horizontal"
            android:background="@drawable/start_button_bg_round"
            android:text="@string/chart_button"
            android:textColor="@color/lightText"/>

        <Button
            android:id="@+id/walk_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_gravity="center_horizontal"
...
